// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Money Formatter accepts a both a locale prop and a currency prop 1`] = `
<Component
  currency="EUR"
  locale="de-DE"
>
  <span>
    3.400,00 €
  </span>
</Component>
`;

exports[`Money Formatter accepts a currency prop 1`] = `
<Component
  currency="EUR"
  locale="en-US"
>
  <span>
    €3,400.00
  </span>
</Component>
`;

exports[`Money Formatter accepts a locale prop 1`] = `
<Component
  currency="USD"
  locale="de-DE"
>
  <span>
    3.400,00 $
  </span>
</Component>
`;

exports[`Money Formatter does basic formatting - without config 1`] = `
<Component
  currency="USD"
  locale="en-US"
>
  <span>
    $3,400.00
  </span>
</Component>
`;
